with the right Fst algorithm

--- a/Session_2/Fst_short_chuncks/msprime_window_size_chuncks.ipynb
+++ b/Session_2/Fst_short_chuncks/msprime_window_size_chuncks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,8 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "import Fst_ts_thread_interval as F"
    ]
   },
   {
@@ -23,11 +24,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_size = 20 #number of samples per deme\n",
+    "sample_size = 4 #number of samples per deme\n",
     "\n",
     "mig = 3.8866e-7\n",
     "seqLength = 32e3 \n",
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,102 +124,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Start</th>\n",
-       "      <th>cM/Mb</th>\n",
-       "      <th>cM</th>\n",
-       "      <th>Mb</th>\n",
-       "      <th>relative length</th>\n",
-       "      <th>recombination</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>275</th>\n",
-       "      <td>15279126</td>\n",
-       "      <td>937.756243</td>\n",
-       "      <td>52.836</td>\n",
-       "      <td>0.056343</td>\n",
-       "      <td>0.003353</td>\n",
-       "      <td>1.664370e-04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>276</th>\n",
-       "      <td>15335469</td>\n",
-       "      <td>178.868009</td>\n",
-       "      <td>52.836</td>\n",
-       "      <td>0.295391</td>\n",
-       "      <td>0.017579</td>\n",
-       "      <td>6.055296e-06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>277</th>\n",
-       "      <td>15630860</td>\n",
-       "      <td>2493.313312</td>\n",
-       "      <td>53.135</td>\n",
-       "      <td>0.021311</td>\n",
-       "      <td>0.001268</td>\n",
-       "      <td>1.169965e-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>278</th>\n",
-       "      <td>15652171</td>\n",
-       "      <td>46.135385</td>\n",
-       "      <td>53.135</td>\n",
-       "      <td>1.151719</td>\n",
-       "      <td>0.068539</td>\n",
-       "      <td>4.005785e-07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>279</th>\n",
-       "      <td>16803890</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        Start        cM/Mb      cM        Mb  relative length  recombination\n",
-       "275  15279126   937.756243  52.836  0.056343         0.003353   1.664370e-04\n",
-       "276  15335469   178.868009  52.836  0.295391         0.017579   6.055296e-06\n",
-       "277  15630860  2493.313312  53.135  0.021311         0.001268   1.169965e-03\n",
-       "278  15652171    46.135385  53.135  1.151719         0.068539   4.005785e-07\n",
-       "279  16803890     0.000000   0.000  0.000000         0.000000            NaN"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "hapmap = pd.read_csv('hapmap.csv')\n",
     "hapmap['relative length'] = hapmap['Mb']/hapmap['Mb'].sum()\n",
@@ -228,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +159,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,18 +204,99 @@
     "    \n",
     "#demographic events: specify in the order they occur backwards in time\n",
     "demographic_events = [\n",
+    "    msprime.MassMigration(time=secT, source=1, destination=0, proportion=proportion),\n",
     "    msprime.PopulationParametersChange(time=splitT, initial_size=Ne0, population_id=0),\n",
-    "    msprime.MassMigration(time=splitT, source=1, destination=0, proportion=1.0),\n",
-    "    msprime.MassMigration(time=secT, source=1, destination=0, proportion=proportion)\n",
+    "    msprime.MassMigration(time=splitT, source=1, destination=0, proportion=1.0)\n",
     "    ]\n",
     "\n",
+    "reps=20\n",
     "replicates = msprime.simulate(\n",
-    "        num_replicates = 1,\n",
+    "        num_replicates = 20,\n",
     "        length = seqLength, \n",
     "        recombination_rate = recr,\n",
     "        population_configurations = population_configurations,\n",
-    "        demographic_events = demographic_events,\n",
-    "        mutation_rate = mu)"
+    "        demographic_events = demographic_events)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "determining windows: 100%|██████████| 1/1 [00:00<00:00,  1.15it/s]\n",
+      "calculating tree-wise Fst: 100%|██████████| 13969/13969 [01:00<00:00, 230.38it/s]\n",
+      "recombining tree-wise into window-wise Fst values: 100%|██████████| 1/1 [00:00<00:00, 256.34it/s]\n",
+      "determining windows: 100%|██████████| 1/1 [00:00<00:00,  1.11it/s]\n",
+      "calculating tree-wise Fst: 100%|██████████| 14138/14138 [01:00<00:00, 233.00it/s]\n",
+      "recombining tree-wise into window-wise Fst values: 100%|██████████| 1/1 [00:00<00:00, 245.17it/s]\n",
+      "determining windows: 100%|██████████| 1/1 [00:00<00:00,  1.15it/s]\n",
+      "calculating tree-wise Fst: 100%|█████████▉| 14137/14140 [01:00<00:00, 102.84it/s]\n",
+      "recombining tree-wise into window-wise Fst values: 100%|██████████| 1/1 [00:00<00:00, 240.14it/s]\n",
+      "determining windows: 100%|██████████| 1/1 [00:00<00:00,  1.10it/s]\n",
+      "calculating tree-wise Fst: 100%|██████████| 14670/14670 [01:06<00:00, 220.48it/s]\n",
+      "recombining tree-wise into window-wise Fst values: 100%|██████████| 1/1 [00:00<00:00, 255.81it/s]\n",
+      "determining windows: 100%|██████████| 1/1 [00:00<00:00,  1.12it/s]\n",
+      "calculating tree-wise Fst: 100%|█████████▉| 14857/14858 [01:11<00:00, 103.06it/s]\n",
+      "recombining tree-wise into window-wise Fst values: 100%|██████████| 1/1 [00:00<00:00, 210.62it/s]\n",
+      "determining windows: 100%|██████████| 1/1 [00:00<00:00,  1.09it/s]\n",
+      "calculating tree-wise Fst: 100%|██████████| 14379/14379 [01:03<00:00, 228.13it/s]\n",
+      "recombining tree-wise into window-wise Fst values: 100%|██████████| 1/1 [00:00<00:00, 240.80it/s]\n",
+      "determining windows: 100%|██████████| 1/1 [00:00<00:00,  1.14it/s]\n",
+      "calculating tree-wise Fst: 100%|██████████| 14037/14037 [01:00<00:00, 102.38it/s]\n",
+      "recombining tree-wise into window-wise Fst values: 100%|██████████| 1/1 [00:00<00:00, 260.74it/s]\n",
+      "determining windows: 100%|██████████| 1/1 [00:00<00:00,  1.13it/s]\n",
+      "calculating tree-wise Fst: 100%|██████████| 14833/14833 [01:06<00:00, 222.94it/s]\n",
+      "recombining tree-wise into window-wise Fst values: 100%|██████████| 1/1 [00:00<00:00, 237.19it/s]\n",
+      "determining windows: 100%|██████████| 1/1 [00:00<00:00,  1.17it/s]\n",
+      "calculating tree-wise Fst: 100%|██████████| 14144/14144 [01:00<00:00, 232.56it/s]\n",
+      "recombining tree-wise into window-wise Fst values: 100%|██████████| 1/1 [00:00<00:00, 168.12it/s]\n",
+      "determining windows: 100%|██████████| 1/1 [00:00<00:00,  1.10it/s]\n",
+      "calculating tree-wise Fst: 100%|██████████| 14258/14258 [01:01<00:00, 232.53it/s]\n",
+      "recombining tree-wise into window-wise Fst values: 100%|██████████| 1/1 [00:00<00:00, 252.29it/s]\n",
+      "determining windows: 100%|██████████| 1/1 [00:00<00:00,  1.17it/s]\n",
+      "calculating tree-wise Fst: 100%|██████████| 13902/13902 [00:58<00:00, 237.49it/s]\n",
+      "recombining tree-wise into window-wise Fst values: 100%|██████████| 1/1 [00:00<00:00, 300.65it/s]\n",
+      "determining windows: 100%|██████████| 1/1 [00:00<00:00,  1.11it/s]\n",
+      "calculating tree-wise Fst: 100%|██████████| 14699/14699 [01:08<00:00, 101.83it/s]\n",
+      "recombining tree-wise into window-wise Fst values: 100%|██████████| 1/1 [00:00<00:00, 262.13it/s]\n",
+      "determining windows: 100%|██████████| 1/1 [00:00<00:00,  1.19it/s]\n",
+      "calculating tree-wise Fst: 100%|██████████| 14025/14025 [00:59<00:00, 235.14it/s]\n",
+      "recombining tree-wise into window-wise Fst values: 100%|██████████| 1/1 [00:00<00:00, 317.80it/s]\n",
+      "determining windows: 100%|██████████| 1/1 [00:00<00:00,  1.08it/s]\n",
+      "calculating tree-wise Fst: 100%|██████████| 14394/14394 [01:03<00:00, 101.96it/s]\n",
+      "recombining tree-wise into window-wise Fst values: 100%|██████████| 1/1 [00:00<00:00, 236.13it/s]\n",
+      "determining windows: 100%|██████████| 1/1 [00:00<00:00,  1.14it/s]\n",
+      "calculating tree-wise Fst: 100%|██████████| 14356/14356 [01:03<00:00, 226.60it/s]\n",
+      "recombining tree-wise into window-wise Fst values: 100%|██████████| 1/1 [00:00<00:00, 218.58it/s]\n",
+      "determining windows: 100%|██████████| 1/1 [00:00<00:00,  1.16it/s]\n",
+      "calculating tree-wise Fst: 100%|██████████| 14443/14443 [01:03<00:00, 228.11it/s]\n",
+      "recombining tree-wise into window-wise Fst values: 100%|██████████| 1/1 [00:00<00:00, 269.63it/s]\n",
+      "determining windows: 100%|██████████| 1/1 [00:00<00:00,  1.14it/s]\n",
+      "calculating tree-wise Fst: 100%|██████████| 14356/14356 [01:03<00:00, 226.51it/s]\n",
+      "recombining tree-wise into window-wise Fst values: 100%|██████████| 1/1 [00:00<00:00, 270.08it/s]\n",
+      "determining windows: 100%|██████████| 1/1 [00:00<00:00,  1.16it/s]\n",
+      "calculating tree-wise Fst: 100%|█████████▉| 14467/14468 [01:02<00:00, 109.77it/s]\n",
+      "recombining tree-wise into window-wise Fst values: 100%|██████████| 1/1 [00:00<00:00, 236.46it/s]\n",
+      "determining windows: 100%|██████████| 1/1 [00:00<00:00,  1.09it/s]\n",
+      "calculating tree-wise Fst: 100%|█████████▉| 14887/14888 [01:08<00:00, 218.82it/s]\n",
+      "recombining tree-wise into window-wise Fst values: 100%|██████████| 1/1 [00:00<00:00, 263.15it/s]\n",
+      "determining windows: 100%|██████████| 1/1 [00:00<00:00,  1.15it/s]\n",
+      "calculating tree-wise Fst: 100%|██████████| 13688/13688 [00:57<00:00, 239.12it/s]\n",
+      "recombining tree-wise into window-wise Fst values: 100%|██████████| 1/1 [00:00<00:00, 255.69it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#this step uses the Fst_script, running 20 replicates takes 20 minutes, clearly we need to hope that Jerome comes \n",
+    "# up with a more efficient implementation (time cost not due to windowmaking here, but because algorithm does not use)\n",
+    "#the fact that trees along the ts are correlated.\n",
+    "Fst = np.zeros(reps)\n",
+    "for index, ts in enumerate(replicates):\n",
+    "    Fst[index] = F.calculate_Fst(ts, windowsize=32e3)[0][0]"
    ]
   }
  ],
