with secondary contact and mutation based scripts

--- a/Session_2/Fst_short_chuncks/msprime_window_size_chuncks.ipynb
+++ b/Session_2/Fst_short_chuncks/msprime_window_size_chuncks.ipynb
@@ -124,15 +124,113 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Start</th>\n",
+       "      <th>cM/Mb</th>\n",
+       "      <th>cM</th>\n",
+       "      <th>Mb</th>\n",
+       "      <th>relative length</th>\n",
+       "      <th>recombination</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>1.352503</td>\n",
+       "      <td>0.080487</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1352504</td>\n",
+       "      <td>11.418321</td>\n",
+       "      <td>0.401</td>\n",
+       "      <td>0.035119</td>\n",
+       "      <td>0.002090</td>\n",
+       "      <td>0.000003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1387623</td>\n",
+       "      <td>84.486971</td>\n",
+       "      <td>0.415</td>\n",
+       "      <td>0.004912</td>\n",
+       "      <td>0.000292</td>\n",
+       "      <td>0.000172</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1392535</td>\n",
+       "      <td>17.491938</td>\n",
+       "      <td>0.857</td>\n",
+       "      <td>0.048994</td>\n",
+       "      <td>0.002916</td>\n",
+       "      <td>0.000004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1441529</td>\n",
+       "      <td>67.515636</td>\n",
+       "      <td>0.896</td>\n",
+       "      <td>0.013271</td>\n",
+       "      <td>0.000790</td>\n",
+       "      <td>0.000051</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Start      cM/Mb     cM        Mb  relative length  recombination\n",
+       "0        1   0.000000  0.000  1.352503         0.080487       0.000000\n",
+       "1  1352504  11.418321  0.401  0.035119         0.002090       0.000003\n",
+       "2  1387623  84.486971  0.415  0.004912         0.000292       0.000172\n",
+       "3  1392535  17.491938  0.857  0.048994         0.002916       0.000004\n",
+       "4  1441529  67.515636  0.896  0.013271         0.000790       0.000051"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hapmap = pd.read_csv('hapmap.csv')\n",
+    "hapmap.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "hapmap = pd.read_csv('hapmap.csv')\n",
-    "hapmap['relative length'] = hapmap['Mb']/hapmap['Mb'].sum()\n",
-    "hapmap['recombination'] = hapmap['cM/Mb']/100/(hapmap['Mb']*1e6)\n",
-    "hapmap.tail()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
