--- a/Session_2/Fst_short_chuncks/msprime_window_size_chuncks.ipynb
+++ b/Session_2/Fst_short_chuncks/msprime_window_size_chuncks.ipynb
@@ -52,12 +52,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "replicates = msprime.simulate(\n",
-    "        num_replicates = 1,\n",
+    "        num_replicates = 10,\n",
     "        length = seqLength, \n",
     "        recombination_rate = recr,\n",
     "        population_configurations = population_configurations,\n",
@@ -66,6 +66,25 @@
     "                            [mig,0]],\n",
     "        mutation_rate = mu)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'generator' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-0c43fb46bb27>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mreplicates\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'generator' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
