expanded recombination heterogeneity and admixture

--- a/Session_2/Fst_short_chuncks/simulating_windowise_Fst.ipynb
+++ b/Session_2/Fst_short_chuncks/simulating_windowise_Fst.ipynb
@@ -26,7 +26,8 @@
    "metadata": {},
    "source": [
     "We are interested in understanding the divergence between two species and have been analysing Fst in windows of 32kb for a sample of 2 diploid individuals per species and have observed some tantalizing outliers. Let's (for now) assume that we have concrete information on the background demography and have estimated parameters under very simple null model of divergence with gene flow. An obvious questions is:\n",
-    "- How likely windows with extreme Fst outliers given this history (and sample size)?\n"
+    "- How likely windows with extreme Fst outliers given this history (and sample size)?\n",
+    "- Need to show the chromosome 18 Fst plot for Heliconius from Dom here!\n"
    ]
   },
   {
@@ -893,8 +894,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fst has a much wider distribution if we include hetero"
+    "$F_{st}$ has a much wider distribution if we include heterogeneity in recombination rate!!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
